removed extra layout and refactored main to splash

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/MyMaterialTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity"
             android:label="@string/title_activity_leaderboard"></activity>
         <activity android:name=".LeaderboardActivity">
             <intent-filter>
