--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.8.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.0'
 
+    implementation 'android.arch.lifecycle:viewmodel:2.3.0'
+    implementation 'android.arch.lifecycle:extensions:2.3.0'
+    annotationProcessor 'android.arch.lifecycle:compiler:2.3.0'
+
 
     
 }
