--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/MyMaterialTheme">
-        <activity android:name=".ProjectSubmission"></activity>
+        <activity android:name=".ui.view.ProjectSubmission"></activity>
         <activity android:name=".ui.view.LeaderboardActivity" />
         <activity android:name=".ui.view.SplashActivity">
             <intent-filter>
